# ASH-Pattern-System-Windows

./: .gitignore  LICENSE  LICENSE-README.md  PR_BODY.md  README.md  add-all-files.ps1  commit-source.sh  install-state.json  manifest.json  mcp-bridge-config.json
completion-evidence/: ALL-BLOCKERS-RESOLVED.md  BUILD-STATUS-v1.md  CANONICAL-CORPUS-FRAMEWORK.md  CHECKSUM-GENERATOR.md  FINDING-REGISTER-v2.json  PERFORMANCE-BUDGETS.md  RESOLUTION-SUMMARY.md  SBOMLICENSE-REPORT.md  STATUS-CORRECTION.md  THREAT-MODEL-OUTLINE.md  WHAT-HAS-NOT-BEEN-COMPLETE.md  WORK-COMPLETE-SUMMARY.md  accessibility-report-complete.md  accessibility-report.md  architecture-inventory.md  arm64-release-checksums.txt  baseline-audit.md  branch-divergence-report.md  branch-inventory.txt  (+25 more)
windows/migration/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  document.md
windows/migration/docs/: README.md
windows/migration/docs/api/: README.md
windows/migration/docs/doxygen/: Doxyfile
windows/migration/docs/examples/: cross_platform_abstraction_example.cpp  migration_guide_example.cpp  modern_features_example.cpp
windows/migration/docs/tutorials/: cross_platform_abstractions.md  getting_started.md  migration_guide_tutorial.md  modern_c++_features.md
windows/migration/include/: cross_platform_abstraction.hpp  legacy_api_compat.hpp  migration.hpp  migration_guide.hpp  modern_features.hpp
windows/migration/src/: cross_platform_abstraction.cpp  legacy_api_compat.cpp  main.cpp  migration.cpp  migration_guide.cpp  modern_features.cpp
(+114 files in other folders)
